# qstyle-demo

./: CMakeLists.txt  README.md  main.cpp  oxygenbenchmarkwidget.cpp  oxygenbenchmarkwidget.h  oxygenbuttondemowidget.cpp  oxygenbuttondemowidget.h  oxygendemodialog.cpp  oxygendemodialog.h  oxygendemowidget.h  oxygenframedemowidget.cpp  oxygeninputdemowidget.cpp  oxygeninputdemowidget.h  oxygenmdidemowidget.cpp  oxygensimulator.cpp  oxygensimulator.h  oxygenstylechooser.cpp  oxygenstylechooser.h  resources.qrc
icons/Tango/: index.theme
icons/oxygen/: index.theme
kwidgetsaddons/: CMakeLists.txt.5.60.0  README.md
kwidgetsaddons/src/: kpagemodel.h  kpagewidgetmodel.h  ktitlewidget.cpp  ktitlewidget.h
ui/: oxygenbenchmarkwidget.ui  oxygenbuttondemowidget.ui  oxygendemodialog.ui  oxygenframedemowidget.ui  oxygeninputdemowidget.ui  oxygenmdidemowidget.ui  oxygentabdemowidget.ui
